# secondproject

./: pyproject.toml  requirements.txt  start.sh
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
myproject/: db.sqlite3  requirements.txt
myproject/drfapp/: middleware.py  models.py  serializers.py  views.py
myproject/drfapp/migrations/: 0001_initial.py
myproject/myapp/: admin.py  form.py  models.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_student_course.py  0003_rename_name_student_student_name.py  0004_rename_students_course_course.py  0005_remove_course_course_student_courses.py  0006_profile.py  0007_author_book.py  0008_item.py
myproject/myapp/static/sty/: admin.css  base.css  one.css
myproject/myapp/templates/: about.html  bootstrab.html  color.html  course_list.html  create_course.html  enroll_student.html  form.html  home.html  item_confirm_delete.html  item_details.html  item_form.html  item_list.html  login.html  page1.html  page2.html  page3.html  page4.html  register.html
myproject/myproject/: settings.py  urls.py
